Add Zenodo citation to imsane tutorial

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -1929,3 +1929,19 @@
               GitLab Instance",
   keywords = "Datasets;Cephalic furrow mechanics"
 }
+
+@MISC{Vellutini2022-ya,
+  title     = "How to make cartographic projections using {ImSAnE}",
+  author    = "Vellutini, Bruno C",
+  abstract  = "This tutorial shows how to make cartographic projections of fly
+               embryos using the ImSAnE Toolbox (Heemskerk and Streichan 2015).
+               Instructions: download and open the imsane-tutorial.html file on
+               your browser.",
+  publisher = "Zenodo",
+  month     =  mar,
+  year      =  2022,
+  url       = "https://zenodo.org/record/7628300",
+  keywords  = "tutorial; imsane; imagej; matlab; ilastik;
+               fiji;Datasets;Cephalic furrow mechanics",
+  doi       = "10.5281/ZENODO.7628300"
+}
