Edit image analyses methods, add bunwarp reference

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -1945,3 +1945,36 @@
                fiji;Datasets;Cephalic furrow mechanics",
   doi       = "10.5281/ZENODO.7628300"
 }
+
+@INCOLLECTION{Arganda-Carreras2006-im,
+  title     = "Consistent and elastic registration of histological sections
+               using vector-spline regularization",
+  booktitle = "Computer Vision Approaches to Medical Image Analysis",
+  author    = "Arganda-Carreras, Ignacio and Sorzano, Carlos O S and Marabini,
+               Roberto and Carazo, José María and Ortiz-de-Solorzano, Carlos
+               and Kybic, Jan",
+  abstract  = "Here we present a new image registration algorithm for the
+               alignment of histological sections that combines the ideas of
+               B-spline based elastic registration and consistent image
+               registration, to allow simultaneous registration of images in
+               two directions (direct and inverse). In principle, deformations
+               based on B-splines are not invertible. The consistency term
+               overcomes this limitation and allows registration of two images
+               in a completely symmetric way. This extension of the elastic
+               registration method simplifies the search for the optimum
+               deformation and allows registering with no information about
+               landmarks or deformation regularization. This approach can also
+               be used as the first step to solve the problem of group-wise
+               registration.",
+  publisher = "Springer Berlin Heidelberg",
+  pages     = "85--95",
+  series    = "Lecture notes in computer science",
+  year      =  2006,
+  url       = "https://link.springer.com/chapter/10.1007/11889762_8",
+  address   = "Berlin, Heidelberg",
+  keywords  = "Cephalic furrow mechanics",
+  language  = "en",
+  issn      = "0302-9743, 1611-3349",
+  isbn      = "9783540462576, 9783540462583",
+  doi       = "10.1007/11889762\_8"
+}
