Re-organize methods

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -1918,18 +1918,6 @@
   pmc       = "PMC4460289"
 }
 
-@MISC{Vellutini_undated-ou,
-  title    = "Supplementary information for the cephalic furrow project",
-  author   = "Vellutini, Bruno Cossermelli",
-  abstract = "This repository contains data, analyses, and supporting
-              information associated with our project about the role of the
-              cephalic furrow to the mechanics of gastrulation in Drosophila.",
-  url      = "https://git.mpi-cbg.de/cosserme/cephalic-furrow",
-  note     = "Title of the publication associated with this dataset: MPI-CBG
-              GitLab Instance",
-  keywords = "Datasets;Cephalic furrow mechanics"
-}
-
 @MISC{Vellutini2022-ya,
   title     = "How to make cartographic projections using {ImSAnE}",
   author    = "Vellutini, Bruno C",
@@ -1977,4 +1965,17 @@
   issn      = "0302-9743, 1611-3349",
   isbn      = "9783540462576, 9783540462583",
   doi       = "10.1007/11889762\_8"
+}
+
+@MISC{Vellutini2023-hg,
+  title       = "Central repository of the cephalic furrow project",
+  author      = "Vellutini, Bruno C",
+  abstract    = "This repository contains data, analyses, and supporting
+                 information associated with our project about the role of the
+                 cephalic furrow in the mechanics of Drosophila gastrulation.",
+  institution = "Github",
+  year        =  2023,
+  url         = "https://github.com/bruvellu/cephalic-furrow",
+  keywords    = "Cephalic furrow mechanics;Datasets",
+  language    = "en"
 }
