Include reference to Analyze Skeleton plugin

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -1979,3 +1979,35 @@
   keywords    = "Cephalic furrow mechanics;Datasets",
   language    = "en"
 }
+
+@ARTICLE{Arganda-Carreras2010-la,
+  title     = "{3D} reconstruction of histological sections: Application to
+               mammary gland tissue",
+  author    = "Arganda-Carreras, Ignacio and Fernández-González, Rodrigo and
+               Muñoz-Barrutia, Arrate and Ortiz-De-Solorzano, Carlos",
+  abstract  = "In this article, we present a novel method for the automatic 3D
+               reconstruction of thick tissue blocks from 2D histological
+               sections. The algorithm completes a high-content (multiscale,
+               multifeature) imaging system for simultaneous morphological and
+               molecular analysis of thick tissue samples. This computer-based
+               system integrates image acquisition, annotation, registration,
+               and three-dimensional reconstruction. We present an experimental
+               validation of this tool using both synthetic and real data. In
+               particular, we present the 3D reconstruction of an entire mouse
+               mammary gland and demonstrate the integration of high-resolution
+               molecular data.",
+  journal   = "Microsc. Res. Tech.",
+  publisher = "Wiley",
+  volume    =  73,
+  number    =  11,
+  pages     = "1019--1029",
+  month     =  oct,
+  year      =  2010,
+  url       = "https://onlinelibrary.wiley.com/doi/abs/10.1002/jemt.20829",
+  keywords  = "computer-assisted microscopy; assisted histopathology; image
+               registration;Cephalic furrow mechanics",
+  language  = "en",
+  issn      = "1097-0029, 1059-910X",
+  pmid      = "20232465",
+  doi       = "10.1002/jemt.20829"
+}
