Revise data visualization text and references

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -9,6 +9,15 @@
   doi       = "10.1007/978-3-662-02454-6"
 }
 
+@MISC{R_Core_Team2022-ki,
+  title     = "R: A language and environment for statistical computing",
+  author    = "{R Core Team}",
+  publisher = "R Foundation for Statistical Computing",
+  year      =  2022,
+  url       = "http://www.r-project.org",
+  keywords  = "Brachiopod wnt landscape;Cephalic furrow mechanics"
+}
+
 @ARTICLE{McGinnis1992-qj,
   title    = "Homeobox genes and axial patterning",
   author   = "McGinnis, W and Krumlauf, R",
@@ -1824,6 +1833,16 @@
   doi      = "10.1093/bioinformatics/btw413"
 }
 
+@MISC{RStudio_Team2022-wr,
+  title       = "{RStudio}: Integrated Development Environment for {R}",
+  author      = "{RStudio Team}",
+  institution = "RStudio, PBC.",
+  year        =  2022,
+  url         = "http://www.rstudio.com/",
+  address     = "Boston, MA",
+  keywords    = "Brachiopod wnt landscape;Cephalic furrow mechanics"
+}
+
 @ARTICLE{Jimenez-Guri2014-zs,
   title     = "A staging scheme for the development of the moth midge
                \textit{{C}logmia albipunctata}",
@@ -1881,6 +1900,45 @@
   keywords  = "Cephalic furrow mechanics"
 }
 
+@ARTICLE{Schmied2020-ip,
+  title    = "Effective image visualization for publications - a workflow using
+              open access tools and concepts",
+  author   = "Schmied, Christopher and Jambor, Helena Klara",
+  abstract = "Today, 25\% of figures in biomedical publications contain images
+              of various types, e.g. photos, light or electron microscopy
+              images, x-rays, or even sketches or drawings. Despite being
+              widely used, published images may be ineffective or illegible
+              since details are not visible, information is missing or they
+              have been inappropriately processed. The vast majority of such
+              imperfect images can be attributed to the lack of experience of
+              the authors as undergraduate and graduate curricula lack courses
+              on image acquisition, ethical processing, and visualization. Here
+              we present a step-by-step image processing workflow for effective
+              and ethical image presentation. The workflow is aimed to allow
+              novice users with little or no prior experience in image
+              processing to implement the essential steps towards publishing
+              images. The workflow is based on the open source software Fiji,
+              but its principles can be applied with other software packages.
+              All image processing steps discussed here, and complementary
+              suggestions for image presentation, are shown in an accessible
+              ``cheat sheet''-style format, enabling wide distribution, use,
+              and adoption to more specific needs.",
+  journal  = "F1000Res.",
+  volume   =  9,
+  pages    = "1373",
+  month    =  nov,
+  year     =  2020,
+  url      = "http://dx.doi.org/10.12688/f1000research.27140.2",
+  keywords = "Beginner's workflow; FIJI; Good principles of figure design;
+              Image Publication; Image analysis; Image processing;
+              Visualization; open source;Cephalic furrow mechanics",
+  language = "en",
+  issn     = "2046-1402",
+  pmid     = "33708381",
+  doi      = "10.12688/f1000research.27140.2",
+  pmc      = "PMC7931257.2"
+}
+
 @ARTICLE{Caroti2015-cy,
   title     = "Germ line transformation and in vivo labeling of nuclei in
                {D}iptera: report on \textit{{M}egaselia abdita} ({P}horidae)
@@ -1916,6 +1974,42 @@
   pmid      = "26044750",
   doi       = "10.1007/s00427-015-0504-5",
   pmc       = "PMC4460289"
+}
+
+@MISC{The_Inkscape_Project2022-ht,
+  title    = "Inkscape: Open Source Scalable Vector Graphics Editor",
+  author   = "{The Inkscape Project}",
+  year     =  2022,
+  url      = "https://inkscape.org",
+  keywords = "Cephalic furrow mechanics"
+}
+
+@ARTICLE{Granger2021-zg,
+  title     = "Jupyter: Thinking and storytelling with code and data",
+  author    = "Granger, Brian E and Perez, Fernando",
+  abstract  = "Project Jupyter is an open-source project for interactive
+               computing widely used in data science, machine learning, and
+               scientific computing. We argue that even though Jupyter helps
+               users perform complex, technical work, Jupyter itself solves
+               problems that are fundamentally human in nature. Namely, Jupyter
+               helps humans to think and tell stories with code and data. We
+               illustrate this by describing three dimensions of Jupyter: 1)
+               interactive computing; 2) computational narratives; and 3) the
+               idea that Jupyter is more than software. We illustrate the
+               impact of these dimensions on a community of practice in earth
+               and climate science.",
+  journal   = "Comput. Sci. Eng.",
+  publisher = "Institute of Electrical and Electronics Engineers (IEEE)",
+  volume    =  23,
+  number    =  2,
+  pages     = "7--14",
+  month     =  mar,
+  year      =  2021,
+  url       = "https://ieeexplore.ieee.org/document/9387490",
+  keywords  = "Cephalic furrow mechanics",
+  copyright = "https://creativecommons.org/licenses/by/4.0/legalcode",
+  issn      = "1521-9615, 1558-366X",
+  doi       = "10.1109/mcse.2021.3059263"
 }
 
 @MISC{Vellutini2022-ya,
